<resources>
    <string name="app_name">Psychology</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="login">Вход</string>
    <string name="password">Пароль</string>
    <string name="login_email">Email</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="createAccount">Создать аккаунт</string>
    <string name="email">Email</string>
    <string name="repeatPassword">Repeat Password</string>
    <string name="create">Create</string>
    <string name="emptyFieldError">Fill all the fields</string>
    <string name="passwordRepeatPasswordError">Password and repeat password are different!</string>
    <string name="userInfo">User Info</string>
    <string name="profile">Profile</string>
    <string name="my_groups">My Groups</string>
    <string name="create_new_group">Create New Group</string>
    <string name="logout">Logout</string>
    <string name="image_capture_no_camera">No Camera Available!</string>
    <string name="createNewGroup">Create New Group</string>
    <string name="myGroups">My Groups</string>
    <string name="send">Send</string>
    <string name="new_message">New Message</string>
    <string name="addUser">Add User</string>
    <string name="removeUser">Remove User</string>
    <string name="editGroup">Edit Group</string>
    <string name="send_pn">Send PN</string>
    <string name="collapse_buttons">Collapse Buttons</string>
    <string name="add">Add</string>
    <string name="user_login_email">User login / email</string>
    <string name="remove">Remove</string>
    <string name="notification_title">Notification title</string>
    <string name="notification_text">Notification text</string>
    <string name="pickImageFromGallery">Pick Image from Gallery</string>
    <string name="send_notification">Send notification</string>
    <string name="ageTitle">Возраст</string>
    <string name="nameTitle">Имя</string>
    <string name="nameHint">Введите имя</string>
    <string name="passwordHint">Введите пароль</string>
    <string name="next">Далее</string>
    <string name="ageHint">Введите возраст</string>
    <string name="landingTitle">Тесты</string>
    <string name="reactionWhiteText">Нажми на белый, когда он появится на экране</string>
    <string name="timeTitle">Время</string>
    <string name="timeHint">Введите время</string>

    <string name="reactionTitle">Скорость реакции</string>
    <string name="attentionStabilityTitle">Устойчивость внимания</string>
    <string name="focusingTestTitle">Концентрация внимания</string>
    <string name="attentionVolumeTestTitle">Объем внимания</string>
    <string name="stressResistanceTestTitle">Стрессоустойчивость</string>
    <string name="complexMotorReactionTestTitle">Сложная двигательная реакция</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="resultsTitle">Результаты</string>
    <string name="linesCount">Всего строк:</string>
    <string name="errorsCount">Количество ошибок:</string>
    <string name="missesCount">Количество пропущенных:</string>
    <string name="save">Save</string>
    <string name="minReactTime">Минимальное время реакции:</string>
    <string name="maxReactTime">Максимальное время реакции:</string>
    <string name="averageReactTime">Среднее время реакции:</string>
    <string name="attentionVolumeWinsNumber">Количество верных совпадений:</string>
    <string name="AvgReactTime">Среднее время реакции:</string>
    <string name="reactionDescription">Результаты получаются после 10-ти прохождений теста</string>
    <string name="currentReactNumber">Осталось прохождений до получения результатов:</string>
    <string name="instruction">Инструкция</string>
    <string name="start">Начать</string>

    <string name="instruction_focusing"> В этом тесте вверху экрана появится повернутое в определенную сторону кольцо. Нужно смотреть на первую строчку из колец и выбирать кнопками внизу количество совпадающих по направлению колец, после нажатия строчка пропадает и остальные сдвигаются вверх. </string>
    <string name="instruction_reaction"> В этом тесте нужно как можно быстрее нажать на экран при появлении белого цвета. Тест проводится 10 раз, и в конце определяется среднее значение реакции. </string>
    <string name="instruction_attention_stability"> На экране будут меняться цифры. В какой-то момент появится красный квадрат, который закроет цифру. После этого снова появится цифра, которую нужно увидеть и нажать левую кнопку, если цифра четная, или правую кнопку, если цифра нечетная. Цифра появится лишь на короткое время, и за ней сразу последует другой красный квадрат. Определить нужно только цифру между двумя квадратами. </string>
    <string name="instruction_attention_volume"> Нажмите на кнопку, когда на экране появятся две одинаковые фигуры. </string>
    <string name="instruction_stress_resistance">Зеленый свет будет перемещаться между элементами. С некоторой вероятностью он может переместиться сразу через элемент, в этот момент нужно нажимать на кнопку.</string>
    <string name="instruction_complex_motor_reaction">Круг в центре постоянно меняет цвет. Нужно нажать зеленую кнопку, если круг зеленого цвета. Красную кнопку, если красного. И ничего не нажимать, если серого или желтого.</string>
    <string name="landingScreenTitle">Стартовая страница</string>
    <string name="info">Профиль</string>
    <string name="testing">Тестирование</string>
    <string name="statistics">Статистика</string>
    <string name="settings">Настройки</string>
    <string name="exit">Выйти</string>
    <string name="back">Назад</string>
    <string name="save2">Сохранить</string>
    <string name="enterEmail">Введите email</string>
    <string name="complex_motor_wins">Количество верных нажатий:</string>
    <string name="complex_motor_fails">Количество ошибок</string>
    <string name="easy">Начальный</string>
    <string name="medium">Средний</string>
    <string name="hard">Продвинутый</string>
    <string name="settings_level">Уровень сложности:</string>
    <string name="winsCount">Количество правильных</string>
</resources>