<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/reactionTitle"
            android:textColor="@color/black"
            android:textSize="22sp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/reactionResultsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/complexMotorReactionTestTitle"
            android:textColor="@color/black"
            android:textSize="22sp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/complexResultsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/attentionVolumeTestTitle"
            android:textColor="@color/black"
            android:textSize="22sp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/volumeResultsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/focusingTestTitle"
            android:textColor="@color/black"
            android:textSize="22sp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/focusingResultsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/attentionStabilityTitle"
            android:textColor="@color/black"
            android:textSize="22sp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/stabilityResultsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/stressResistanceTestTitle"
            android:textColor="@color/black"
            android:textSize="22sp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/stressResultsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

    </LinearLayout>


</ScrollView>