<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/vertical_background"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp">

    <TextView
        android:id="@+id/splashText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="56sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/landingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/splashText"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="90dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/landingText"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/createAccountButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/landingTitle"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_button"
        android:text="@string/create_account"
        android:textColor="@color/light_blue"
        android:textStyle="bold" />

    <Button
        android:id="@+id/loginButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/createAccountButton"
        android:text="@string/login"
        android:textColor="@color/white" />


</RelativeLayout>